--- a/views/index.html
+++ b/views/index.html
@@ -9,17 +9,7 @@
     <!-- Content Header (Page header) -->
     <div class="content-header">
       <div class="container-fluid">
-        <div class="row mb-2">
-          <div class="col-sm-6">
-            <h1 class="m-0 text-dark">Dashboard v3</h1>
-          </div><!-- /.col -->
-          <div class="col-sm-6">
-            <ol class="breadcrumb float-sm-right">
-              <li class="breadcrumb-item"><a href="#">Home</a></li>
-              <li class="breadcrumb-item active">Dashboard v3</li>
-            </ol>
-          </div><!-- /.col -->
-        </div><!-- /.row -->
+        <!-- /.row -->
       </div><!-- /.container-fluid -->
     </div>
     <!-- /.content-header -->
@@ -282,31 +272,4 @@
     <!-- Control sidebar content goes here -->
   </aside>
   <!-- /.control-sidebar -->
-
-  <!-- Main Footer -->
-<div>
-  <footer class="main-footer">
-    <strong>Copyright &copy; 2014-2020 <a href="#">vcooa.com</a>.</strong>
-    All rights reserved.
-    <div class="float-right d-none d-sm-inline-block">
-      <b>Version</b> 3.1
-    </div>
-  </footer>
-</div>
-<!-- ./wrapper -->
-
-<!-- REQUIRED SCRIPTS -->
-
-<!-- jQuery -->
-<script src="../static/js/jquery.min.js"></script>
-<!-- Bootstrap -->
-<script src="../static/js/bootstrap.bundle.min.js"></script>
-<!-- AdminLTE -->
-<script src="../static/js/adminlte.js"></script>
-
-<!-- OPTIONAL SCRIPTS -->
-<script src="../static/js/Chart.min.js"></script>
-<script src="../static/js/demo.js"></script>
-<script src="../static/js/dashboard3.js"></script>
-</body>
-</html>
+{{template "footer"}}
