--- a/views/mainsidebar.html
+++ b/views/mainsidebar.html
@@ -13,49 +13,12 @@
         <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
             <!-- Add icons to the links using the .nav-icon class
                  with font-awesome or any other icon font library -->
-            <li class="nav-item has-treeview menu-open">
-                <a href="#" class="nav-link active">
-                    <i class="nav-icon fas fa-tachometer-alt"></i>
-                    <p>
-                        Dashboard
-                        <i class="right fas fa-angle-left"></i>
-                    </p>
-                </a>
-                <ul class="nav nav-treeview">
-                    <li class="nav-item">
-                        <a href="./index.html" class="nav-link">
-                            <i class="far fa-circle nav-icon"></i>
-                            <p>Dashboard v1</p>
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="./index2.html" class="nav-link">
-                            <i class="far fa-circle nav-icon"></i>
-                            <p>Dashboard v2</p>
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="./index.html" class="nav-link active">
-                            <i class="far fa-circle nav-icon"></i>
-                            <p>Dashboard v3</p>
-                        </a>
-                    </li>
-                </ul>
-            </li>
-            <li class="nav-item">
-                <a href="pages/widgets.html" class="nav-link">
-                    <i class="nav-icon fas fa-th"></i>
-                    <p>
-                        Widgets
-                        <span class="right badge badge-danger">New</span>
-                    </p>
-                </a>
-            </li>
+            <li class="nav-header"></li>
             <li class="nav-item has-treeview">
                 <a href="#" class="nav-link">
                     <i class="nav-icon fas fa-copy"></i>
                     <p>
-                        Layout Options
+                        用户管理
                         <i class="fas fa-angle-left right"></i>
                         <span class="badge badge-info right">6</span>
                     </p>
@@ -109,7 +72,7 @@
                 <a href="#" class="nav-link">
                     <i class="nav-icon fas fa-chart-pie"></i>
                     <p>
-                        Charts
+                        运营报表分析
                         <i class="right fas fa-angle-left"></i>
                     </p>
                 </a>
@@ -138,7 +101,7 @@
                 <a href="#" class="nav-link">
                     <i class="nav-icon fas fa-tree"></i>
                     <p>
-                        UI Elements
+                        商户管理
                         <i class="fas fa-angle-left right"></i>
                     </p>
                 </a>
@@ -197,7 +160,7 @@
                 <a href="#" class="nav-link">
                     <i class="nav-icon fas fa-edit"></i>
                     <p>
-                        Forms
+                        硬件设备管理
                         <i class="fas fa-angle-left right"></i>
                     </p>
                 </a>
@@ -232,7 +195,7 @@
                 <a href="#" class="nav-link">
                     <i class="nav-icon fas fa-table"></i>
                     <p>
-                        Tables
+                        设置
                         <i class="fas fa-angle-left right"></i>
                     </p>
                 </a>
@@ -257,270 +220,8 @@
                     </li>
                 </ul>
             </li>
-            <li class="nav-header">EXAMPLES</li>
-            <li class="nav-item">
-                <a href="pages/calendar.html" class="nav-link">
-                    <i class="nav-icon fas fa-calendar-alt"></i>
-                    <p>
-                        Calendar
-                        <span class="badge badge-info right">2</span>
-                    </p>
-                </a>
-            </li>
-            <li class="nav-item">
-                <a href="pages/gallery.html" class="nav-link">
-                    <i class="nav-icon far fa-image"></i>
-                    <p>
-                        Gallery
-                    </p>
-                </a>
-            </li>
-            <li class="nav-item has-treeview">
-                <a href="#" class="nav-link">
-                    <i class="nav-icon far fa-envelope"></i>
-                    <p>
-                        Mailbox
-                        <i class="fas fa-angle-left right"></i>
-                    </p>
-                </a>
-                <ul class="nav nav-treeview">
-                    <li class="nav-item">
-                        <a href="pages/mailbox/mailbox.html" class="nav-link">
-                            <i class="far fa-circle nav-icon"></i>
-                            <p>Inbox</p>
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="pages/mailbox/compose.html" class="nav-link">
-                            <i class="far fa-circle nav-icon"></i>
-                            <p>Compose</p>
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="pages/mailbox/read-mail.html" class="nav-link">
-                            <i class="far fa-circle nav-icon"></i>
-                            <p>Read</p>
-                        </a>
-                    </li>
-                </ul>
-            </li>
-            <li class="nav-item has-treeview">
-                <a href="#" class="nav-link">
-                    <i class="nav-icon fas fa-book"></i>
-                    <p>
-                        Pages
-                        <i class="fas fa-angle-left right"></i>
-                    </p>
-                </a>
-                <ul class="nav nav-treeview">
-                    <li class="nav-item">
-                        <a href="pages/examples/invoice.html" class="nav-link">
-                            <i class="far fa-circle nav-icon"></i>
-                            <p>Invoice</p>
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="pages/examples/profile.html" class="nav-link">
-                            <i class="far fa-circle nav-icon"></i>
-                            <p>Profile</p>
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="pages/examples/e-commerce.html" class="nav-link">
-                            <i class="far fa-circle nav-icon"></i>
-                            <p>E-commerce</p>
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="pages/examples/projects.html" class="nav-link">
-                            <i class="far fa-circle nav-icon"></i>
-                            <p>Projects</p>
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="pages/examples/project-add.html" class="nav-link">
-                            <i class="far fa-circle nav-icon"></i>
-                            <p>Project Add</p>
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="pages/examples/project-edit.html" class="nav-link">
-                            <i class="far fa-circle nav-icon"></i>
-                            <p>Project Edit</p>
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="pages/examples/project-detail.html" class="nav-link">
-                            <i class="far fa-circle nav-icon"></i>
-                            <p>Project Detail</p>
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="pages/examples/contacts.html" class="nav-link">
-                            <i class="far fa-circle nav-icon"></i>
-                            <p>Contacts</p>
-                        </a>
-                    </li>
-                </ul>
-            </li>
-            <li class="nav-item has-treeview">
-                <a href="#" class="nav-link">
-                    <i class="nav-icon far fa-plus-square"></i>
-                    <p>
-                        Extras
-                        <i class="fas fa-angle-left right"></i>
-                    </p>
-                </a>
-                <ul class="nav nav-treeview">
-                    <li class="nav-item">
-                        <a href="pages/examples/login.html" class="nav-link">
-                            <i class="far fa-circle nav-icon"></i>
-                            <p>Login</p>
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="pages/examples/register.html" class="nav-link">
-                            <i class="far fa-circle nav-icon"></i>
-                            <p>Register</p>
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="pages/examples/forgot-password.html" class="nav-link">
-                            <i class="far fa-circle nav-icon"></i>
-                            <p>Forgot Password</p>
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="pages/examples/recover-password.html" class="nav-link">
-                            <i class="far fa-circle nav-icon"></i>
-                            <p>Recover Password</p>
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="pages/examples/lockscreen.html" class="nav-link">
-                            <i class="far fa-circle nav-icon"></i>
-                            <p>Lockscreen</p>
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="pages/examples/legacy-user-menu.html" class="nav-link">
-                            <i class="far fa-circle nav-icon"></i>
-                            <p>Legacy User Menu</p>
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="pages/examples/language-menu.html" class="nav-link">
-                            <i class="far fa-circle nav-icon"></i>
-                            <p>Language Menu</p>
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="pages/examples/404.html" class="nav-link">
-                            <i class="far fa-circle nav-icon"></i>
-                            <p>Error 404</p>
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="pages/examples/500.html" class="nav-link">
-                            <i class="far fa-circle nav-icon"></i>
-                            <p>Error 500</p>
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="pages/examples/pace.html" class="nav-link">
-                            <i class="far fa-circle nav-icon"></i>
-                            <p>Pace</p>
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="pages/examples/blank.html" class="nav-link">
-                            <i class="far fa-circle nav-icon"></i>
-                            <p>Blank Page</p>
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="starter.html" class="nav-link">
-                            <i class="far fa-circle nav-icon"></i>
-                            <p>Starter Page</p>
-                        </a>
-                    </li>
-                </ul>
-            </li>
-            <li class="nav-header">MISCELLANEOUS</li>
-            <li class="nav-item">
-                <a href="https://adminlte.io/docs/3.0" class="nav-link">
-                    <i class="nav-icon fas fa-file"></i>
-                    <p>Documentation</p>
-                </a>
-            </li>
-            <li class="nav-header">MULTI LEVEL EXAMPLE</li>
-            <li class="nav-item">
-                <a href="#" class="nav-link">
-                    <i class="fas fa-circle nav-icon"></i>
-                    <p>Level 1</p>
-                </a>
-            </li>
-            <li class="nav-item has-treeview">
-                <a href="#" class="nav-link">
-                    <i class="nav-icon fas fa-circle"></i>
-                    <p>
-                        Level 1
-                        <i class="right fas fa-angle-left"></i>
-                    </p>
-                </a>
-                <ul class="nav nav-treeview">
-                    <li class="nav-item">
-                        <a href="#" class="nav-link">
-                            <i class="far fa-circle nav-icon"></i>
-                            <p>Level 2</p>
-                        </a>
-                    </li>
-                    <li class="nav-item has-treeview">
-                        <a href="#" class="nav-link">
-                            <i class="far fa-circle nav-icon"></i>
-                            <p>
-                                Level 2
-                                <i class="right fas fa-angle-left"></i>
-                            </p>
-                        </a>
-                        <ul class="nav nav-treeview">
-                            <li class="nav-item">
-                                <a href="#" class="nav-link">
-                                    <i class="far fa-dot-circle nav-icon"></i>
-                                    <p>Level 3</p>
-                                </a>
-                            </li>
-                            <li class="nav-item">
-                                <a href="#" class="nav-link">
-                                    <i class="far fa-dot-circle nav-icon"></i>
-                                    <p>Level 3</p>
-                                </a>
-                            </li>
-                            <li class="nav-item">
-                                <a href="#" class="nav-link">
-                                    <i class="far fa-dot-circle nav-icon"></i>
-                                    <p>Level 3</p>
-                                </a>
-                            </li>
-                        </ul>
-                    </li>
-                    <li class="nav-item">
-                        <a href="#" class="nav-link">
-                            <i class="far fa-circle nav-icon"></i>
-                            <p>Level 2</p>
-                        </a>
-                    </li>
-                </ul>
-            </li>
-            <li class="nav-item">
-                <a href="#" class="nav-link">
-                    <i class="fas fa-circle nav-icon"></i>
-                    <p>Level 1</p>
-                </a>
-            </li>
         </ul>
     </nav>
-    <!-- /.sidebar-menu -->
-    <!-- /.sidebar -->
+
 </aside>
 {{end}}
