--- a/views/login.html
+++ b/views/login.html
@@ -21,7 +21,7 @@
 <body class="hold-transition login-page">
 <div class="login-box">
   <div class="login-logo">
-    <a href="index.html"><b>Vcooa</b></a>
+    <a href="index.html"><b>Vcooa管理平台</b></a>
   </div>
   <!-- /.login-logo -->
   <div class="card">
