--- a/views/mainsidebar.html
+++ b/views/mainsidebar.html
@@ -5,7 +5,7 @@
     <a href="index.html" class="brand-link">
         <img src="../static/img/AdminLTELogo.png" alt="AdminLTE Logo" class="brand-image img-circle elevation-3"
              style="opacity: .8">
-        <span class="brand-text font-weight-light">Vcooa</span>
+        <span class="brand-text font-weight-light">Vcooa管理平台</span>
     </a>
 
     <!-- Sidebar Menu -->
@@ -20,7 +20,6 @@
                     <p>
                         用户管理
                         <i class="fas fa-angle-left right"></i>
-                        <span class="badge badge-info right">6</span>
                     </p>
                 </a>
                 <ul class="nav nav-treeview">
