修改页面名称

--- a/views/login.html
+++ b/views/login.html
@@ -74,7 +74,7 @@
       <!-- /.social-auth-links -->
 
       <p class="mb-1">
-        <a href="forgot-password.html">忘记密码?</a>
+        <a href="forgotpassword.html">忘记密码?</a>
       </p>
       <p class="mb-0">
         <a href="register.html" class="text-center">注册成为新用户</a>
