两级菜单字体调整一下

--- a/views/mainsidebar.html
+++ b/views/mainsidebar.html
@@ -24,7 +24,7 @@
                     </a>
                     <ul class="nav-item nav-treeview">
                         <li class="nav-item">
-                            <a href="#" class="nav-link">
+                            <a href="#" class="nav-link small">
                                 <i class="far fa-circle nav-icon"></i>
                                 <p>
                                     商户基本信息查询
@@ -42,7 +42,7 @@
                     </a>
                     <ul class="nav-item nav-treeview">
                         <li class="nav-item">
-                            <a href="#" class="nav-link">
+                            <a href="#" class="nav-link small">
                                 <i class="far fa-circle nav-icon"></i>
                                 <p>
                                     交易订单查询
@@ -60,7 +60,7 @@
                     </a>
                     <ul class="nav-item nav-treeview">
                         <li class="nav-item">
-                            <a href="#" class="nav-link">
+                            <a href="#" class="nav-link small">
                                 <i class="far fa-circle nav-icon"></i>
                                 <p>
                                     用户信息查询
@@ -68,7 +68,7 @@
                             </a>
                         </li>
                                 <li class="nav-item">
-                                    <a href="#" class="nav-link">
+                                    <a href="#" class="nav-link small">
                                         <i class="far fa-circle nav-icon"></i>
                                         <p>用户签约记录查询</p>
                                     </a>
