--- a/views/mainsidebar.html
+++ b/views/mainsidebar.html
@@ -75,6 +75,30 @@
                                 </li>
                     </ul>
                 </li>
+                <li class="nav-item has-treeview menu-close">
+                    <a href="#" class="nav-link">
+                        <p>
+                            设置
+                            <i class="right fas fa-angle-left"></i>
+                        </p>
+                    </a>
+                    <ul class="nav-item nav-treeview">
+                        <li class="nav-item">
+                            <a href="#" class="nav-link small">
+                                <i class="far fa-circle nav-icon"></i>
+                                <p>
+                                    修改密码
+                                </p>
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="#" class="nav-link small">
+                                <i class="far fa-circle nav-icon"></i>
+                                <p>退出</p>
+                            </a>
+                        </li>
+                    </ul>
+                </li>
                 <!-- 主菜单继续增加在这里-->
             </ul>
         </nav>
