把头部搜索框去掉了

--- a/views/mainsidebar.html
+++ b/views/mainsidebar.html
@@ -27,7 +27,7 @@
                             <a href="#" class="nav-link small">
                                 <i class="far fa-circle nav-icon"></i>
                                 <p>
-                                    商户基本信息查询
+                                    商户信息查询
                                 </p>
                             </a>
                         </li>
