增加了商户管理页面

--- a/views/mainsidebar.html
+++ b/views/mainsidebar.html
@@ -24,7 +24,7 @@
                     </a>
                     <ul class="nav-item nav-treeview">
                         <li class="nav-item">
-                            <a href="#" class="nav-link small">
+                            <a href="/com" class="nav-link small">
                                 <i class="far fa-circle nav-icon"></i>
                                 <p>
                                     商户信息查询
