增加了table样式，但是没生效，要研究下

--- a/views/Merchant.html
+++ b/views/Merchant.html
@@ -1,5 +1,8 @@
 {{template "header"}}
 <title>商户管理--Vcooa业务系统管理平台</title>
+<!-- jsGrid -->
+<link rel="stylesheet" href="../static/css/jsgrid.min.css">
+<link rel="stylesheet" href="../static/css/jsgrid-theme.min.css">
 </head>
 {{template "topnav"}}
 {{template "mainsidebar"}}
@@ -35,6 +38,11 @@
                         <!-- /.card-footer-->
                     </div>
                     <!-- /.card -->
+                    <div class="card">
+                        <div class="card-body">
+                            <div id="jsGrid2"></div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -42,6 +50,31 @@
     <!-- /.content -->
 </div>
 <!-- /.content-wrapper -->
+<!-- jsGrid -->
+<script src="../static/js/db.js"></script>
+<script src="../static/js/jsgrid.min.js"></script>
+<!-- page script -->
+<script>
+    $(function () {
+        $("#jsGrid2").jsGrid({
+            height: "100%",
+            width: "100%",
+
+            sorting: true,
+            paging: true,
+
+            data: db.clients,
+
+            fields: [
+                { name: "Married", type: "checkbox", title: "Is Married" },
+                { name: "Name", type: "text", width: 150 },
+                { name: "Age", type: "number", width: 50 },
+                { name: "Address", type: "text", width: 200 },
+                { name: "Country", type: "select", items: db.countries, valueField: "Id", textField: "Name" }
+            ]
+        });
+    });
+</script>
 
 <!-- Control Sidebar -->
 <aside class="control-sidebar control-sidebar-dark">
@@ -49,3 +82,5 @@
 </aside>
 <!-- /.control-sidebar -->
 {{template "footer"}}
+
+
